Bug 1811199: Skip synthetic for-of catch blocks in isInCatchScope r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D167855