js/src/debugger/Script.cpp
@@ -2245,15 +2245,25 @@ class DebuggerScript::IsInCatchScopeMatcher {
       return false;
     }
 
+    MOZ_ASSERT(!isInCatch_);
     for (const TryNote& tn : script->trynotes()) {
-      if (tn.start <= offset_ && offset_ < tn.start + tn.length &&
-          tn.kind() == TryNoteKind::Catch) {
+      bool inRange = tn.start <= offset_ && offset_ < tn.start + tn.length;
+      if (inRange && tn.kind() == TryNoteKind::Catch) {
         isInCatch_ = true;
+      } else if (isInCatch_) {
+        // For-of loops generate a synthetic catch block to handle
+        // closing the iterator when throwing an exception. The
+        // debugger should ignore these synthetic catch blocks, so
+        // we skip any Catch trynote that is immediately followed
+        // by a ForOf trynote.
+        if (inRange && tn.kind() == TryNoteKind::ForOf) {
+          isInCatch_ = false;
+          continue;
+        }
         return true;
       }
     }
 
-    isInCatch_ = false;
     return true;
   }
   ReturnType match(Handle<WasmInstanceObject*> instance) {
